src/styles/global.scss
/* ... */
.navbar-dropdown.open {
  display: block;
}
@media only screen and (max-width: $desktop) {
  $navbar-background-color: $dark-bg-color;
  $navbar-item-color: $dark-color;
  $navbar-dropdown-arrow: $dark-color;
  .navbar {
    .navbar-burger:hover {
      color: $dark-color !important;
    }
    img.logo {
      width: 99px;
      max-width: 99px;
      height: 40px;
      max-height: 40px;
    }

    .navbar-menu {
      background-color: $dark-bg-color !important;
    }
    .navbar-item.has-dropdown {
      .navbar-link {
        &:hover, &.active  {
          background-color: $dark-bg-hover-color;
          color: $dark-color;
        }
        &::after {
          transition: .3s;
          border-color: $dark-color !important;
        }
      }
      .navbar-dropdown {
        display: none;
        .custom.navbar-item {
          color: $dark-font-color !important;
          &:hover {
            background-color: $dark-bg-hover-color;
            color: $dark-color !important;
          }
        }
      }
      &.is-open {
        .navbar-link {
          background-color: $dark-bg-hover-color;
          color: $dark-color;
          &::after {
            transform: rotate(135deg);
            transition: .3s;
          }
        }
        .navbar-dropdown {
            display: block;
        }
      }
    }
    .navbar-end > a.navbar-item:hover {
      background-color: $text !important;
    }
  }
}

.navbar-brand {
  .navbar-item {
    height: 50px !important;
    padding: 15px;
    width: 130px;
    .logo > img {
      height: 40px;
      max-height: 40px;
      margin-top: 5px;
    }
  }
}
/*
 * END navbar style
 */

/*
 * footer style
 */
$footer-background-color: $dark-bg-color;
$footer-color: $dark-color;
$footer-padding: 1rem;

footer.footer {
  .left-wrapper {
    display: flex;
    a:not(:first-child) {
      margin-left: 15px;
    }
  }
  .right-wrapper a:not(:last-child) {
    margin-right: 15px;
  }
  a {
    color: #ffffff;
    &.image {
      position: relative;
      height: 15px;
      img {
        margin: 0;
        position: absolute;
        top: 50%;
      }
    }
  }
}
@media only screen and (max-width: $desktop) {
  footer.footer {
    & > div {
      flex-direction: column;
      justify-content: normal !important;
    }
    .left-wrapper, .right-wrapper {
      display: flex;
      flex-direction: column;
    }

    .left-wrapper a:not(:first-child) {
      margin-left: 0;
      margin-top: 10px;
    }
    .right-wrapper a {
      margin-top: 10px;
      &:not(:last-child) {
        margin-right: 0;
      }
    }
  }
}

/*
 * END footer style
 */
.notification {
  margin-bottom: 0 !important;
}
.title.gradient-underline {
  margin: 1rem 0 !important;
  border-top: 0;
  border-left: 0;
  border-right: 0;
  border-bottom: 2px #e2011b solid;
  -webkit-border-image: linear-gradient(to right, $title-color 70%,rgba(146,2,9,0));
  border-image: linear-gradient(to right, $title-color 70%,rgba(146,2,9,0));
  border-image-slice: 1;
}

a.internal-link, a.external-link, a.mail-link {
  text-decoration: underline;
}
a.external-link {
  background-position: right center;
  background-repeat: no-repeat;
  background-image: linear-gradient(transparent,transparent), url(https://bgee.org/bgee_test/img/external_link.png);
  background-size: 9px;
  padding-right: 13px;
}


ul.unordered {
  list-style-type: disc;
}
ol.ordered, ul.unordered {
  margin-block-start: 1em;
  margin-block-end: 1em;
  margin-inline-start: 0;
  margin-inline-end: 0;
  padding-inline-start: 40px;
  li:not(:first-child) {
    margin-top: 10px;
  }
}

div.card.custom-card {
  box-shadow: none;
  cursor: pointer;
  padding: .5rem 0;
  &:hover {
    box-shadow: 0 0.125em 0.25em rgba(10,10, 10, 1/3);
  }
  .card-content {
    padding-bottom: 0;
  }
  .card-image {
    display: flex;
    justify-content: center;
  }
  .card-title {
    color: $title-color;
    font-weight: 600;
    text-align: center;
    text-decoration: underline;
  }
}
div.card.species {
  cursor: pointer;
  padding: 0;
  width: 100px;
  &:hover {
    box-shadow: 0 0 1em -0.125em rgba(226, 1, 27, .9)
  }
  .card-image {
    display: flex;
    justify-content: center;
  }
}

pre {
  border: 1px solid #999;
  border-radius: 4px;
  & > code {
    border: none;
  }
}
$table-cell-border-width: 0;
.card.search-input {
  max-width: 500px;
}

th {
  -webkit-user-select: none;
}
table.table {
  &.sortable {
    thead > tr > th {
      cursor: pointer;
      &:hover {
        opacity: .5;
      }
    }
  }
  &.small-font {
    td, th  {
      font-size: 10px;
    }
  }
  thead {
    td, th {
      border-width: 2px 0 !important
    }
  }
  tbody {
    tr {
      &.is-expanded {
        td {
          .expand-content {
            display: block;
          }
          .expand-button ion-icon {
            transform: rotate(180deg);
            transition: .35s;
          }
        }
      }
      td {
        .expand-content {
          display: none;
        }
        .expand-button ion-icon {
          transition: .35s;
        }
      }
    }
  }
}

div.separator {
  border-top: 1px solid $text;
  width: 70%;
  margin: auto;
}

span.icon {
  &.open {
    transform: rotate(-180deg);
    transition: .35s;
  }
    transition: .35s;
}
/* ... */

